--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
                     <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Shapes</span>
                 </div>
                 <div class="bg-pink-50 p-5 rounded-2xl border border-pink-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-300">
-                    <span class="text-4xl mb-3 filter drop-shadow-sm">🌈</span>
+                    <!-- Changed from Rainbow to Artist Palette -->
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">🎨</span>
                     <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Colors</span>
                 </div>
                 <div class="bg-yellow-50 p-5 rounded-2xl border border-yellow-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-300">
@@ -494,6 +495,36 @@
                 <div class="bg-teal-50 p-5 rounded-2xl border border-teal-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
                     <span class="text-4xl mb-3 filter drop-shadow-sm">🇧🇩</span>
                     <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Countries</span>
+                </div>
+
+                <!-- Human Body -->
+                <div class="bg-rose-50 p-5 rounded-2xl border border-rose-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">💪</span>
+                    <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Body Parts</span>
+                </div>
+
+                <!-- Solar System -->
+                <div class="bg-indigo-50 p-5 rounded-2xl border border-indigo-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">🪐</span>
+                    <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Solar System</span>
+                </div>
+
+                <!-- Furniture -->
+                <div class="bg-amber-50 p-5 rounded-2xl border border-amber-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">🪑</span>
+                    <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Furniture</span>
+                </div>
+
+                <!-- Crockeries -->
+                <div class="bg-cyan-50 p-5 rounded-2xl border border-cyan-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">🍽️</span>
+                    <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Crockeries</span>
+                </div>
+
+                <!-- Vehicles -->
+                <div class="bg-yellow-50 p-5 rounded-2xl border border-yellow-100 shadow-sm flex flex-col items-center text-center hover-lift cursor-pointer fade-up delay-500">
+                    <span class="text-4xl mb-3 filter drop-shadow-sm">🚍</span>
+                    <span class="text-xs font-bold text-slate-700 uppercase tracking-wide">Vehicles</span>
                 </div>
             </div>
             
