--- a/index.html
+++ b/index.html
@@ -965,9 +965,9 @@
             mapImg.className = 'intro-map-bg';
             
             // Center the map, bigger for background
-            // Mobile: 70% width (Request #2)
+            // Mobile: 90% width (Increased size)
             const mapStyle = isMobile 
-                ? 'bottom: 20%; left: 50%; width: 70%; max-width: 500px;' 
+                ? 'bottom: 20%; left: 50%; width: 90%; max-width: 600px;' 
                 : 'bottom: 10%; left: 50%; width: 60%; max-width: 800px;';
             
             mapImg.style.cssText = mapStyle;
